correction z-index useless

--- a/packages/@coorpacademy-components/src/template/app-player/player/style.css
+++ b/packages/@coorpacademy-components/src/template/app-player/player/style.css
@@ -46,7 +46,6 @@
   display: flex;
   flex-direction: column;
   flex: 12;
-  z-index: 1;
 }
 
 @media tablet {
